Implement drilldown scracth

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -21,12 +21,12 @@
   />
 </main>
 
-<footer class="d-flex justify-content-center">
+<!-- <footer class="d-flex justify-content-center">
   <app-pagination
     [currentPage]="currentView === 'volume' ? 0 : 1"
     [totalPages]="2"
     (pageChanged)="changeView($event)"
   />
-</footer>
+</footer> -->
 
 }
