--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -118,7 +118,7 @@
     padding-bottom: 0.15rem;
 
     position: fixed;
-    top: 71.25px;
+    top: 4.5rem;
     left: 5%;
     right: 5%;
 
@@ -129,6 +129,10 @@
   /* Adjust table for visibility */
   table {
     position: relative;
-    top: 37.5px;
+    top: 2.25rem;
+  }
+
+  .pagination-container {
+    margin-top: 3.25rem;
   }
 }
