Implement event chain for drill trough

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -12,6 +12,7 @@
   <app-line-chart
     [data]="lineChartDatasets"
     [labels]="lineChartLabels"
+    (drillThrough)="showDrillThroughGraph($event)"
     yAxisTitle="Tonnage (kg)"
   />
 
