Implement drill through with polar chart

--- a/client/src/app/polar-chart/polar-chart.component.html
+++ b/client/src/app/polar-chart/polar-chart.component.html
@@ -1,3 +1,8 @@
+<app-alert
+  alertType="info"
+  alertText="Hier kannst du sehen wie sich dein Volumen innerhalb einer Kategorie und einer bestimmten Woche zusammensetzt."
+></app-alert>
+
 <div>
   <canvas #canvas [id]="chartId"></canvas>
 </div>
