--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,6 +15,7 @@ body {
 
 .blur-background > *:not(app-modal) {
   filter: blur(2px);
+  transition: filter 0.3s ease-in-out; /* Optional: smooth transition */
 }
 
 .outlet-wrapper {
