--- a/client/src/app/rest-timer/rest-timer.component.html
+++ b/client/src/app/rest-timer/rest-timer.component.html
@@ -1,9 +1,36 @@
 <div class="timer-container">
   <div class="timer-display">
     <svg #progressRing class="progress-ring" width="200" height="200">
+      <defs>
+        <!-- Gradient for the background ring -->
+        <linearGradient
+          id="backgroundGradient"
+          x1="0%"
+          y1="0%"
+          x2="100%"
+          y2="100%"
+        >
+          <stop offset="0%" style="stop-color: #007bff; stop-opacity: 1" />
+          <stop offset="100%" style="stop-color: #00c6ff; stop-opacity: 1" />
+        </linearGradient>
+
+        <!-- Gradient for the progress ring -->
+        <linearGradient
+          id="progressGradient"
+          x1="0%"
+          y1="0%"
+          x2="100%"
+          y2="100%"
+        >
+          <stop offset="0%" style="stop-color: #ffffff; stop-opacity: 1" />
+          <stop offset="100%" style="stop-color: #f8f9fa; stop-opacity: 1" />
+        </linearGradient>
+      </defs>
+
+      <!-- Background ring -->
       <circle
         class="progress-ring__background"
-        stroke="#007bff"
+        stroke="url(#backgroundGradient)"
         stroke-width="10"
         fill="transparent"
         r="90"
@@ -11,9 +38,11 @@
         cy="100"
         style="outline: none; box-shadow: none"
       />
+
+      <!-- Progress ring -->
       <circle
         class="progress-ring__circle"
-        stroke="white"
+        stroke="url(#progressGradient)"
         stroke-width="10"
         fill="transparent"
         r="90"
