--- a/client/src/app/rest-timer/rest-timer.component.scss
+++ b/client/src/app/rest-timer/rest-timer.component.scss
@@ -1,6 +1,7 @@
-.timer-container {
+:host {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
   align-items: center;
   text-align: center;
   padding-top: 1.75rem;
@@ -22,7 +23,6 @@
   color: #007bff;
   border-radius: 50%;
   background-color: #fff;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .progress-ring {
@@ -45,31 +45,19 @@
   color: #333;
 }
 
-.timer-controls {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
+.time-remaining {
+  font-size: 2.5rem;
+  color: #333;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-55%);
+  font-weight: 500;
 }
 
-.timer-controls button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s, transform 0.2s;
-}
-
-.timer-controls button:hover {
-  background-color: #0056b3;
-  transform: scale(1.1);
-}
-
-.timer-controls button i {
-  font-size: 1.5rem;
+.initial-time {
+  font-size: 1.1rem;
+  color: #999;
+  position: absolute;
+  top: calc(50% + 2rem);
+  transform: translateY(-50%);
 }
