--- a/client/src/app/training-view-navigation/training-view-navigation.component.html
+++ b/client/src/app/training-view-navigation/training-view-navigation.component.html
@@ -5,7 +5,7 @@
   alertText="Mit horizontalen Wischgesten kannst du zwischen den Tagen navigieren."
 ></app-alert>
 
-<div class="w-100 mb-3">
+<div #swipeContainer class="w-100 mb-3">
   <img
     src="/images/swipe-gestures.webp"
     alt=""
@@ -18,7 +18,7 @@
   alertText="Mit einer Wischgeste von oben links nach unten rechts navigierst du zwischen den einzelnen Trainingswochen."
 ></app-alert>
 
-<div class="w-100 mb-3">
+<div #swipeContainer class="w-100 mb-3">
   <img
     src="/images/swipe-gestures-2.webp"
     alt=""
@@ -26,6 +26,7 @@
   />
 </div>
 }
+
 <div class="d-flex justify-content-center">
   <app-pagination
     [currentPage]="currentPage"
