Adjust routes for improved pwa experience

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
       >
         <li>
           <a
-            href="/training"
+            href="/"
             #navLink
             class="dropdown-item"
             (click)="navigateTo($event)"
