Adjust frontend oauth2 binding for logging in with google

--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -56,7 +56,7 @@
         data-client_id="745778541640-0f05iimgfid2tag6rkvilau5nqt69ko0.apps.googleusercontent.com"
         data-context="signin"
         data-ux_mode="popup"
-        data-login_uri="http://localhost:3000/user/login/oauth2"
+        [attr.data-login_uri]="oauthRoute"
         data-auto_prompt="false"
       ></div>
 
