Fix training card layout issues

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -9,6 +9,10 @@
   </div>
 </div>
 
+<!-- <button type="button" class="fab" (click)="createNewPlan()">
+  <i class="bx bx-plus"></i>
+</button> -->
+
 <section id="gallery">
   <div class="container">
     <div class="row">
