--- a/client/src/app/Pages/register/register.component.scss
+++ b/client/src/app/Pages/register/register.component.scss
@@ -25,7 +25,9 @@
   padding: 30px;
   border-radius: 6px;
   background: #fff;
-  border: 1px solid rgb(226, 226, 226);
+  background: inherit;
+  background: rgba(250, 250, 250, 0.65); /* Halbtransparentes Weiß */
+  border: 1.5px solid rgb(215, 215, 215);
 }
 
 header {
@@ -59,6 +61,7 @@ form {
 
 .field input {
   outline: none;
+  background-color: inherit;
   padding: 0 15px;
   border: 1px solid #cacaca;
 }
@@ -118,19 +121,8 @@ form {
   position: relative;
   height: 1px;
   width: 100%;
-  margin: 36px 0;
+  margin: 30px 0;
   background-color: #d4d4d4;
-}
-
-.line::before {
-  content: "Or";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  color: #8b8b8b;
-  padding: 0 15px;
 }
 
 .media-options div,
