--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -120,16 +120,21 @@
 
     position: fixed;
     top: 4.375rem;
-    left: 5%;
-    right: 5%;
+    padding-inline: 5%;
+    left: 0;
+    right: 0;
 
-    background-color: white;
+    background: rgba(255, 255, 255, 0.65); /* Halbtransparentes Weiß */
   }
 
   /* Adjust table for visibility */
   table {
     position: relative;
     top: 2.25rem;
+  }
+
+  .table > :not(caption) > * > * {
+    background-color: inherit;
   }
 
   .pagination-container {
