--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -5,6 +5,13 @@
   top: 0;
   padding-inline: 7.5%;
   z-index: 999;
+  background-image: linear-gradient(
+      rgba(240, 240, 240, 0.6),
+      rgba(250, 250, 250, 0.65)
+    ),
+    url("/images/background/white-3.avif");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #header .dropdown {
@@ -12,7 +19,7 @@
 }
 
 .form-control {
-  background-color: inherit;
+  background: inherit;
 }
 
 @media screen and (max-width: 786px) {
