Use own implementation for accordion

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -1,5 +1,7 @@
 @if (allTrainingPlans$ | async; as allTrainingPlans) {
 
+<app-accordion />
+
 <!-- + Button with Label -->
 
 <div class="container mt-4 mb-3">
