--- a/client/src/app/accordion/accordion.component.scss
+++ b/client/src/app/accordion/accordion.component.scss
@@ -1,10 +1,7 @@
-/* Optional: Custom styling for the accordion component */
-.card-header button {
-  width: 100%;
-  text-align: left;
+#accordion {
+  padding-inline: 1.35rem;
 }
 
 .card {
-  background-color: inherit;
-  border: none;
+  background: inherit;
 }
