--- a/client/src/app/components/modal-overlay/modal-overlay.component.scss
+++ b/client/src/app/components/modal-overlay/modal-overlay.component.scss
@@ -4,8 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1040; /* Ensure this is below Bootstrap Modals if used */
+  z-index: 1040;
   display: flex;
   align-items: center;
   justify-content: center;
