--- a/client/src/app/accordion/accordion.component.html
+++ b/client/src/app/accordion/accordion.component.html
@@ -1,36 +1,25 @@
 <div id="accordion">
-  @for (item of items; track item; let i = $index) {
-  <div id="heading{{ i }}">
-    <h5>
-      <button
-        (click)="toggleItem(i)"
-        [attr.aria-expanded]="item.isOpen"
-        [attr.aria-controls]="'collapse' + i"
-        style="
-          width: 100%;
-          text-align: left;
-          padding: 10px;
-          border: none;
-          background: none;
-          font-size: 16px;
-          cursor: pointer;
-        "
-      >
-        {{ item.title }}
-      </button>
-    </h5>
-  </div>
+  <div class="card">
+    @for (item of items; track item; let i = $index) {
+    <div class="card-header">
+      <h5 class="mb-0">
+        <button
+          class="btn btn-link"
+          (click)="toggleItem(i)"
+          [attr.aria-expanded]="item.isOpen"
+          [attr.aria-controls]="'collapse' + i"
+        >
+          Collapsible Group Item #1
+        </button>
+      </h5>
+    </div>
 
-  @if (item.isOpen) {
-  <div
-    id="collapse{{ i }}"
-    class="show"
-    [attr.aria-labelledby]="'heading' + i"
-    style="padding: 10px 0"
-  >
-    <div>
+    @if (item.isOpen) {
+
+    <div class="card-body">
       {{ item.content }}
     </div>
+
+    } }
   </div>
-  } }
 </div>
