--- a/client/src/app/icon-button/icon-button.component.html
+++ b/client/src/app/icon-button/icon-button.component.html
@@ -1,7 +1,7 @@
 @if (tooltipTitle()) {
 <button
   type="button"
-  class="btn btn-light btn-md m-1 b-inherit"
+  class="btn btn-light btn-md m-1"
   [appTooltip]="tooltipTitle()"
   (click)="onClick()"
 >
