--- a/client/src/app/Pages/training-plans/training-plans.component.scss
+++ b/client/src/app/Pages/training-plans/training-plans.component.scss
@@ -3,4 +3,9 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
+
+  .container.heading-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
