--- a/client/src/app/components/training-plan-card/training-plan-card.component.scss
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.scss
@@ -40,6 +40,7 @@
 
 /* First border-left-width setting is a fallback */
 .card-custom-img::after {
+  --bs-bg-opacity: 0.5;
   position: absolute;
   content: "";
   top: 161px;
@@ -66,4 +67,8 @@
   left: 10px;
   width: 50px;
   height: 50px;
+}
+
+.bg-white {
+  --bs-bg-opacity: 0.5;
 }
