--- a/client/src/app/speech-to-text/speech-to-text.component.scss
+++ b/client/src/app/speech-to-text/speech-to-text.component.scss
@@ -1,57 +1,94 @@
-/* speech-to-text.component.scss */
 .speech-container {
   display: flex;
+  gap: 5px;
+  min-height: 25rem;
   flex-direction: column;
   align-items: center;
   text-align: center;
   position: relative;
 }
 
-.mic-icon {
-  font-size: 4rem;
-  color: #007bff;
-  cursor: pointer;
-  margin-bottom: 1rem;
-  transition: transform 0.2s ease-in-out;
+.profile-picture-ring {
+  margin-bottom: 2rem;
+}
 
-  &.listening {
-    animation: pulse 1s infinite;
-  }
+.profile-picture-ring {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-picture {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc; /* Optional: Add a border around the picture */
+}
+
+.speaking::before {
+  content: "";
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  border: 3px solid #a78bfa;
+  animation: pulse 1.5s infinite;
 }
 
 @keyframes pulse {
   0% {
     transform: scale(1);
+    opacity: 0.7;
   }
   50% {
-    transform: scale(1.075);
+    transform: scale(1.3);
+    opacity: 0;
   }
   100% {
     transform: scale(1);
+    opacity: 0;
   }
 }
 
 .transcript {
+  min-height: 200px;
   font-size: 1.2rem;
   margin-top: 1rem;
   word-wrap: break-word;
+}
 
-  .derived-action {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
+.chat-bubble {
+  max-width: 70%;
+  min-width: 70%;
 
-    i {
-      font-size: 2rem;
-      color: #007bff;
-      margin-bottom: 0.5rem;
-    }
+  padding: 15px 20px;
+  margin: 8px 0;
+  border-radius: 20px;
+  text-align: left;
+  position: relative;
+  line-height: 1.4;
+  font-size: 14px;
 
-    p {
-      font-size: 1rem;
-      color: #007bff;
-      font-weight: bold;
-    }
+  p {
+    margin: 0;
   }
+}
+
+.chat-bubble.left {
+  background-color: #f1f1f1;
+  align-self: flex-start;
+  margin-left: 10px;
+  border-top-left-radius: 0;
+}
+
+.chat-bubble.right {
+  background-color: #a78bfa;
+  color: white;
+  align-self: flex-end;
+  margin-right: 10px;
+  border-top-right-radius: 0;
 }
