--- a/client/src/app/speech-to-text/speech-to-text.component.scss
+++ b/client/src/app/speech-to-text/speech-to-text.component.scss
@@ -1,15 +1,11 @@
 .speech-container {
   display: flex;
   gap: 5px;
-  min-height: 25rem;
+  min-height: 20rem;
   flex-direction: column;
   align-items: center;
   text-align: center;
   position: relative;
-}
-
-.profile-picture-ring {
-  margin-bottom: 2rem;
 }
 
 .profile-picture-ring {
@@ -71,17 +67,21 @@
   text-align: left;
   position: relative;
   line-height: 1.4;
-  font-size: 14px;
+  font-size: 18px;
 
   p {
     margin: 0;
   }
 }
 
+.exercise-select {
+  align-self: flex-start;
+  margin-bottom: 1rem;
+}
+
 .chat-bubble.left {
   background-color: #f1f1f1;
   align-self: flex-start;
-  margin-left: 10px;
   border-top-left-radius: 0;
 }
 
