Slight adjustments to multi select component

--- a/client/src/app/speech-to-text/speech-to-text.component.html
+++ b/client/src/app/speech-to-text/speech-to-text.component.html
@@ -8,7 +8,7 @@
     />
   </div>
 
-  <div class="exercise-select form-group mt-3 w-100">
+  <div class="exercise-select form-group mt-3">
     <select class="form-control" id="exerciseSelect">
       @for (exercise of exercises; track exercise) {
       <option>
