--- a/client/src/app/multi-select/multi-select.component.scss
+++ b/client/src/app/multi-select/multi-select.component.scss
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.btn {
+  background-color: inherit;
+}
+
 .dropdown button {
   width: 100%;
   display: flex;
@@ -12,6 +16,12 @@
 .dropdown-menu {
   width: 100%;
   overflow-y: auto;
+  background-image: url("/images/background/white-3.avif");
+  opacity: 1;
+
+  .form-control {
+    background: inherit;
+  }
 }
 
 .dropdown-menu.show {
