Implement placeholder for weight recommandation based on last week

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -38,7 +38,7 @@
         <app-training-plan-card
           [trainingPlan]="trainingPlan"
           [columnClass]="columnClass"
-          (changedPlanConstellation)="onChangedPlanConstellation()"
+          (changedPlanConstellation)="loadTrainingPlans()"
         ></app-training-plan-card>
       </div>
       } } }
