--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -21,6 +21,10 @@
   text-align: center;
 }
 
+.weight::placeholder {
+  color: rgb(177, 177, 177);
+}
+
 .fixed-bottom-bar {
   position: fixed;
   left: 0;
