--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -51,117 +51,115 @@
       </tr>
     </thead>
     <tbody>
-      <ng-container
-        *ngFor="let k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; let i = index"
-      >
-        <tr>
-          <td data-cell="Category">
-            <select
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_category"
-              class="exercise-category-selector transparent-input w-100"
-              (change)="onCategoryChange($event)"
-              [ngStyle]="{
-                opacity:
-                  getExercise(k).category === '- Bitte Auswählen -' ||
-                  !getExercise(k).category
-                    ? 0
-                    : 1
-              }"
-            >
-              <option
-                *ngFor="let category of exerciseData.exerciseCategories"
-                [value]="category"
-                [selected]="getExercise(k).category === category"
-              >
-                {{ category }}
-              </option>
-            </select>
-          </td>
-          <td data-cell="Exercise">
-            <select
+      @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k; let i = $index) {
+      @let exercise = trainingPlanData.trainingDay.exercises[i] || { category:
+      '', exercise: '', sets: '', reps: '', weight: '', targetRPE: '',
+      actualRPE: '', estMax: '', };
+
+      <tr>
+        <td data-cell="Category">
+          <select
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_category"
+            class="exercise-category-selector transparent-input w-100"
+            (change)="onCategoryChange($event)"
+            [ngStyle]="{
+              opacity:
+                exercise.category === '- Bitte Auswählen -' ||
+                !exercise.category
+                  ? 0
+                  : 1
+            }"
+          >
+            <option
               *ngFor="let category of exerciseData.exerciseCategories"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
-              class="exercise-name-selector transparent-input"
-              [disabled]="getExercise(k).category !== category"
-              [style.display]="
-                getExercise(k).category === category ? 'block' : 'none'
-              "
-              (change)="onInputChange($event)"
+              [value]="category"
+              [selected]="exercise.category === category"
             >
-              <option
-                *ngFor="
-                  let exerciseName of exerciseData.categorizedExercises[
-                    category
-                  ]
-                "
-                [value]="exerciseName"
-                [selected]="getExercise(k).exercise === exerciseName"
-              >
-                {{ exerciseName }}
-              </option>
-            </select>
-          </td>
-          <td data-cell="Sets">
-            <input
-              type="number"
-              class="transparent-input sets"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_sets"
-              [value]="getExercise(k).sets || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-          <td data-cell="Reps">
-            <input
-              type="number"
-              class="transparent-input reps"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_reps"
-              [value]="getExercise(k).reps || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-          <td data-cell="Weight">
-            <input
-              #weightInput
-              [placeholder]="
-      trainingPlanData.previousTrainingDay?.exercises?.[k - 1]?.weight ?? ''
+              {{ category }}
+            </option>
+          </select>
+        </td>
+        <td data-cell="Exercise">
+          <select
+            *ngFor="let category of exerciseData.exerciseCategories"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
+            class="exercise-name-selector transparent-input"
+            [disabled]="exercise.category !== category"
+            [style.display]="exercise.category === category ? 'block' : 'none'"
+            (change)="onInputChange($event)"
+          >
+            <option
+              *ngFor="
+                let exerciseName of exerciseData.categorizedExercises[category]
               "
-              type="number"
-              class="transparent-input weight"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_weight"
-              [value]="getExercise(k).weight || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-          <td data-cell="RPE">
-            <input
-              type="number"
-              class="transparent-input targetRPE"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_targetRPE"
-              [value]="getExercise(k).targetRPE || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-          <td data-cell="@RPE">
-            <input
-              type="string"
-              class="transparent-input actualRPE"
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_actualRPE"
-              [value]="getExercise(k).actualRPE || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-          <td data-cell="Est. Max">
-            <input
-              type="number"
-              class="transparent-input estMax"
-              readonly
-              name="day{{ trainingDayIndex }}_exercise{{ k }}_estMax"
-              [value]="getExercise(k).estMax || ''"
-              (input)="onInputChange($event)"
-            />
-          </td>
-        </tr>
-      </ng-container>
+              [value]="exerciseName"
+              [selected]="exercise.exercise === exerciseName"
+            >
+              {{ exerciseName }}
+            </option>
+          </select>
+        </td>
+        <td data-cell="Sets">
+          <input
+            type="number"
+            class="transparent-input sets"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_sets"
+            [value]="exercise.sets || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+        <td data-cell="Reps">
+          <input
+            type="number"
+            class="transparent-input reps"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_reps"
+            [value]="exercise.reps || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+        <td data-cell="Weight">
+          <input
+            #weightInput
+            [placeholder]="
+                trainingPlanData.previousTrainingDay?.exercises?.[k - 1]?.weight ?? ''
+              "
+            type="number"
+            class="transparent-input weight"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_weight"
+            [value]="exercise.weight || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+        <td data-cell="RPE">
+          <input
+            type="number"
+            class="transparent-input targetRPE"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_targetRPE"
+            [value]="exercise.targetRPE || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+        <td data-cell="@RPE">
+          <input
+            type="string"
+            class="transparent-input actualRPE"
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_actualRPE"
+            [value]="exercise.actualRPE || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+        <td data-cell="Est. Max">
+          <input
+            type="number"
+            class="transparent-input estMax"
+            readonly
+            name="day{{ trainingDayIndex }}_exercise{{ k }}_estMax"
+            [value]="exercise.estMax || ''"
+            (input)="onInputChange($event)"
+          />
+        </td>
+      </tr>
+      }
     </tbody>
   </table>
 
