Remove max weight recommandation

--- a/client/src/app/Pages/create-training-form/create-training-form.component.html
+++ b/client/src/app/Pages/create-training-form/create-training-form.component.html
@@ -109,8 +109,9 @@
             class="form-control"
             required
           >
-            <option value="max" selected>basierend auf Rechenmax</option>
-            <option value="lastWeek">basierend auf letzter Woche</option>
+            <option value="lastWeek" selected>
+              basierend auf letzter Woche
+            </option>
             <option value="off">keine Gewichtsempfehlungen</option>
           </select>
           <label for="weightPlaceholders">Gewichtsempfehlungen</label>
