--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -123,7 +123,7 @@
             [placeholder]="
                 trainingPlanData.previousTrainingDay?.exercises?.[k - 1]?.weight ?? ''
               "
-            type="number"
+            type="text"
             class="transparent-input weight"
             name="day{{ trainingDayIndex }}_exercise{{ k }}_weight"
             [value]="exercise.weight || ''"
