Implement automatic progression via option modal

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -172,7 +172,12 @@
   </div>
 
   <input type="submit" class="btn btn-dark" />
-  <button class="btn btn-outline-dark m-1" id="reset-btn" type="button">
+  <button
+    class="btn btn-outline-dark m-1"
+    id="reset-btn"
+    type="button"
+    (click)="openAutoProgressionModal()"
+  >
     Options
   </button>
 </form>
