Remove speech recognition from dom

--- a/client/src/app/auto-progression/auto-progression.component.html
+++ b/client/src/app/auto-progression/auto-progression.component.html
@@ -1,3 +1,9 @@
+<app-alert
+  class="mb-3"
+  alertType="primary"
+  alertText="Stelle sicher, dass du deinen Trainingsplan bereits vollständig erstellt und gespeichert hast."
+></app-alert>
+
 <div class="row">
   <div class="col-md-12">
     <div class="card-body">
