--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header id="header" class="py-3 mb-3 border-bottom bg-light">
+<header id="header" class="py-3 border-bottom bg-light">
   <div
     class="container-fluid d-grid gap-3 align-items-center"
     style="grid-template-columns: 1fr 2fr"
