--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,13 +15,17 @@ body {
   background-repeat: repeat;
 }
 
+.background-image {
+  background-image: url("/images/background/white-3.avif");
+}
+
 .blur-background > *:not(app-modal) {
   filter: blur(2px);
   transition: filter 0.3s ease-in-out; /* Optional: smooth transition */
 }
 
 .outlet-wrapper {
-  margin-top: 6rem;
+  margin-top: 5.5rem;
   padding-inline: 7.5%;
 }
 @media screen and (max-width: 786px) {
