Fixed training plan view in desktop mode

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -8,15 +8,10 @@
       [heading]="trainingPlanData.title"
     />
     @if (isMobile) {
-    <button
-      type="button"
-      class="btn btn-light btn-md m-1"
-      appTooltip="Ansehen"
-      (click)="switchToTimerView($event)"
-    >
-      <i class="bx bx-timer"></i>
-    </button>
-
+    <app-icon-button
+      [iconClass]="'bx bx-timer'"
+      (buttonClick)="switchToTimerView()"
+    />
     }
   </div>
 
