--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.weight {
+  text-align: center;
+}
+
 .weight::placeholder {
   color: rgb(177, 177, 177);
 }
@@ -78,6 +82,10 @@
   font-size: 24px;
 }
 
+.table > :not(caption) > * > * {
+  background-color: inherit;
+}
+
 @media (max-width: 768px) {
   .responsive-table td {
     display: grid;
@@ -126,10 +134,6 @@
     right: 0;
     padding: 0.5rem 5%;
     z-index: 10;
-  }
-
-  .table > :not(caption) > * > * {
-    background-color: inherit;
   }
 
   .pagination-container {
