Use no background for larger screens

--- a/client/src/app/multi-select/multi-select.component.html
+++ b/client/src/app/multi-select/multi-select.component.html
@@ -10,7 +10,7 @@
     <!-- Chevron icon is always to the right -->
   </button>
   <div
-    class="dropdown-menu p-2"
+    class="dropdown-menu background-image p-2"
     [class.show]="isOpen()"
     (click)="$event.stopPropagation()"
   >
