--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -1,7 +1,3 @@
-@if (allTrainingPlans$ | async; as allTrainingPlans) {
-
-<!-- + Button with Label -->
-
 <div class="container heading-container mt-4 mb-3">
   <div class="d-flex justify-content-between align-items-center">
     <app-headline [subHeading]="'own'" [heading]="'plans'" />
@@ -13,6 +9,7 @@
   </div>
 </div>
 
+@if (allTrainingPlans$ | async; as allTrainingPlans) {
 <section id="gallery">
   <div class="container">
     <div class="row">
@@ -46,5 +43,15 @@
   </div>
 </section>
 } @else {
-<app-spinner></app-spinner>
+<section id="gallery">
+  <div class="container">
+    <div class="row">
+      @for (k of [1, 2, 3]; track k) {
+      <div [ngClass]="columnClass">
+        <app-skeleton-card />
+      </div>
+      }
+    </div>
+  </div>
+</section>
 }
