Add avatar picture to card placeholder

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -144,6 +144,8 @@
     </tbody>
   </table>
 
+  <app-skeleton-training-table />
+
   <div class="pagination-container mb-4">
     <app-pagination
       [currentPage]="trainingDayIndex"
