--- a/client/src/app/skeleton-card/skeleton-card.component.html
+++ b/client/src/app/skeleton-card/skeleton-card.component.html
@@ -1,6 +1,9 @@
 <div class="card card-custom bg-white border-white border-0 mb-3">
   <div class="card-custom-img skeleton-img"></div>
   <div class="card-custom-avatar"></div>
+  <div class="card-custom-avatar">
+    <div class="img-fluid skeleton-avatar"></div>
+  </div>
   <div class="card-body">
     <div class="skeleton-title mb-3"></div>
     <div class="skeleton-text mb-2"></div>
