Implement provisoric training table skeleton

--- a/client/src/app/skeleton-training-table/skeleton-training-table.component.html
+++ b/client/src/app/skeleton-training-table/skeleton-training-table.component.html
@@ -1,13 +1,12 @@
 <div class="skeleton-container">
+  @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k) {
   <div class="skeleton-section">
-    <div class="skeleton-title mb-2"></div>
-    <div class="skeleton-line mb-1"></div>
-    <div class="skeleton-line short mb-3"></div>
-    <div class="skeleton-line mb-1"></div>
-    <div class="skeleton-line mb-1"></div>
-    <div class="skeleton-line short mb-3"></div>
-    <div class="skeleton-line mb-1"></div>
-    <div class="skeleton-line mb-1"></div>
-    <div class="skeleton-line mb-3"></div>
+    @for (m of [1, 2, 3, 4, 5, 6, 7, 8]; track m) {
+    <div class="skeleton-row">
+      <div class="skeleton-line"></div>
+      <div class="skeleton-line skeleton-fill"></div>
+    </div>
+    }
   </div>
+  }
 </div>
