--- a/client/src/app/skeleton-training-table/skeleton-training-table.component.scss
+++ b/client/src/app/skeleton-training-table/skeleton-training-table.component.scss
@@ -7,28 +7,25 @@
 .skeleton-section {
   /* background-color: #f0f0f0; */
   background: inherit;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 16px 8px;
 }
 
-.skeleton-title {
-  width: 30%;
-  height: 20px;
-  background-color: #e0e0e0;
-  border-radius: 4px;
-  animation: pulse 1.5s infinite ease-in-out;
+.skeleton-row {
+  display: flex;
+  gap: 10px;
 }
 
 .skeleton-line {
-  width: 100%;
-  height: 15px;
+  width: 12ch;
+  height: 1.5rem;
+  margin-bottom: 1.2rem;
   background-color: #e0e0e0;
   border-radius: 4px;
   animation: pulse 1.5s infinite ease-in-out;
 }
 
-.skeleton-line.short {
-  width: 50%;
+.skeleton-fill {
+  flex-grow: 1;
 }
 
 @keyframes pulse {
