--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -35,7 +35,9 @@
       @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k; let i = $index) {
       @let exercise = trainingPlanData.trainingDay.exercises[i] || { category:
       '', exercise: '', sets: '', reps: '', weight: '', targetRPE: '',
-      actualRPE: '', estMax: '', };
+      actualRPE: '', estMax: '', }; @let previousTrainingDayExercise =
+      trainingPlanData.previousTrainingDay?.exercises?.[i] ?? { exercise:
+      undefined, weight: undefined };
 
       <tr>
         <td data-cell="Category">
@@ -102,8 +104,11 @@
           <input
             #weightInput
             [placeholder]="
-                trainingPlanData.previousTrainingDay?.exercises?.[k - 1]?.weight ?? ''
-              "
+              previousTrainingDayExercise?.exercise &&
+              previousTrainingDayExercise.exercise === exercise?.exercise
+                ? previousTrainingDayExercise?.weight
+                : ''
+            "
             type="text"
             class="transparent-input weight"
             name="day{{ trainingDayIndex }}_exercise{{ k }}_weight"
